--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Jamie Portfolio</title>
+        <title>Ethan X Portfolio</title>
         <meta name="description" content="" />
         <link
             rel="shortcut icon"
@@ -45,7 +45,7 @@
                 class="tw-h-[50px] tw-p-[4px] tw-text-2xl tw-font-medium"
                 href=""
             >
-                Jamie
+                Ethan X
             </a>
             <div
                 class="collapsible-header animated-collapse max-lg:tw-shadow-md"
@@ -97,11 +97,11 @@
                         <span
                             class="reveal-hero-text tw-bg-green-200 tw-p-1 tw-px-6"
                         >
-                            Jamie
+                            Ethan X
                         </span>
                         <br />
                         <span class="reveal-hero-text">
-                            Designer. AI engineer</span
+                            Operation Analyst</span
                         >
                     </div>
                     <div
