--- a/index.html
+++ b/index.html
@@ -34,6 +34,77 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+
+        <style>
+            .chatbot-button {
+                position: fixed;
+                bottom: 20px;
+                right: 20px;
+                width: 60px;
+                height: 60px;
+                border-radius: 50%;
+                background-color: #000;
+                color: white;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+                z-index: 1000;
+                border: none;
+                transition: transform 0.2s;
+            }
+
+            .chatbot-button:hover {
+                transform: scale(1.1);
+            }
+
+            .chatbot-modal {
+                display: none;
+                position: fixed;
+                bottom: 100px;
+                right: 20px;
+                width: 400px;
+                height: 600px;
+                background-color: white;
+                border-radius: 10px;
+                box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+                z-index: 999;
+            }
+
+            .chatbot-modal-header {
+                padding: 15px;
+                background-color: #000;
+                color: white;
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+
+            .chatbot-modal-close {
+                background: none;
+                border: none;
+                color: white;
+                font-size: 20px;
+                cursor: pointer;
+            }
+
+            .chatbot-modal-body {
+                height: calc(100% - 50px);
+                width: 100%;
+            }
+
+            @media (max-width: 480px) {
+                .chatbot-modal {
+                    width: 90%;
+                    height: 80vh;
+                    bottom: 80px;
+                    right: 5%;
+                }
+            }
+        </style>
     </head>
     <body
         class="tw-flex tw-min-h-[100vh] tw-flex-col tw-bg-[#fff] tw-font-mono"
@@ -720,20 +791,50 @@
                 </a>
             </div>
         </footer>
+
+        <!-- Add chatbot button and modal -->
+        <button class="chatbot-button" id="chatbotButton" aria-label="Open chat">
+            <i class="bi bi-chat-dots-fill" style="font-size: 24px;"></i>
+        </button>
+
+        <div class="chatbot-modal" id="chatbotModal">
+            <div class="chatbot-modal-header">
+                <span>智能客服</span>
+                <button class="chatbot-modal-close" id="chatbotClose" aria-label="Close chat">×</button>
+            </div>
+            <div class="chatbot-modal-body">
+                <iframe
+                    src="https://udify.app/chatbot/DOVXUpIn0bZJsRvT"
+                    style="width: 100%; height: 100%;"
+                    frameborder="0"
+                    allow="microphone">
+                </iframe>
+            </div>
+        </div>
+
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"
+            integrity="sha512-B1lby8cGcAUU3GR+Fd809/ZxgHbfwJMp0jLTVfHiArTuUt++VqSlJpaJvhNtRf3NERaxDNmmxkdx2o+aHd4bvw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/ScrollTrigger.min.js"
+            integrity="sha512-AY2+JxnBETJ0wcXnLPCcZJIJx0eimyhz3OJ55k2Jx4RtYC+XdIi2VtJQ+tP3BaTst4otlGG1TtPJ9fKrAUnRdQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+
+        <script src="./index.js"></script>
+        <script>
+            // Chatbot functionality
+            document.getElementById('chatbotButton').addEventListener('click', function() {
+                document.getElementById('chatbotModal').style.display = 'block';
+            });
+
+            document.getElementById('chatbotClose').addEventListener('click', function() {
+                document.getElementById('chatbotModal').style.display = 'none';
+            });
+        </script>
     </body>
-
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"
-        integrity="sha512-B1lby8cGcAUU3GR+Fd809/ZxgHbfwJMp0jLTVfHiArTuUt++VqSlJpaJvhNtRf3NERaxDNmmxkdx2o+aHd4bvw=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    ></script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/ScrollTrigger.min.js"
-        integrity="sha512-AY2+JxnBETJ0wcXnLPCcZJIJx0eimyhz3OJ55k2Jx4RtYC+XdIi2VtJQ+tP3BaTst4otlGG1TtPJ9fKrAUnRdQ=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    ></script>
-
-    <script src="./index.js"></script>
 </html>
